@@ -1,6 +1,8 @@
 2004.12.28
 
 * Updated site content.
+* Updated the rsync script to skip .svn files and dirs and turned the rsync
+commands and options into variables.
 
 2004.10.14
 
